Adapt to protobuf-java-api 0.61.0 (#10798)
This PR adapts to the changes introduced in protobuf-java-api:0.61.0.

- GeneratedMessage instead of GeneratedMessageV3
- Assessed custom fees moved to transactionResult
-  shortDebugString was deprecated so replaced it with printer().printToString()
-  removed previous block hash in block header
- changes in test data - removed previous block hash from block files 981, 982 and 0
- change in structure of proto files

---------

Signed-off-by: filev94 <todor.filev@limechain.tech>
Signed-off-by: Xin Li <xin@hashgraph.com>
Co-authored-by: Xin Li <xin@hashgraph.com>